ajustes nas edicoes e css e separacao do JS em 3 documentos com resposabilidades distintas